project/force-app/main/default/objects/Case/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Lookup</type>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Business_Entity_Cases</relationshipName>
    <description>Dự Án (Building)</description>
</CustomField>