project/force-app/main/default/objects/Case/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
    <description>Số Điện Thoại của Người Liên Hệ - Load theo Contact</description>
</CustomField>