project/force-app/main/default/objects/Case/fields/Proposed_Liquidation_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Liquidation_Date__c</fullName>
    <label>Proposed Liquidation Date</label>
    <type>Date</type>
    <description>Ngày Đề Xuất Thanh Lý - Dynamic Layout khi chọn Phân Loại = Thanh Lý</description>
</CustomField>