project/force-app/main/default/objects/Case/fields/RO_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Name__c</fullName>
    <label>RO Name</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>RO_Cases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vị Trí (RO)</description>
</CustomField>