project/force-app/main/default/objects/Case/fields/Stopping_Old_RO_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Stopping_Old_RO_Notification_Date__c</fullName>
    <label>Stopping Old RO Notification Date</label>
    <type>Date</type>
    <description>Ngày Gửi Thông Báo Dịch Chuyển - Relocation Type Case</description>
</CustomField>