project/force-app/main/default/objects/Case/fields/Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Type_Level_1__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <description>Phân Loại - tham chiếu SLA</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint / Feedback</fullName>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
            </value>
            <value>
                <fullName>Marketing Cooperation Proposal</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Tenant Violation Handling</fullName>
            </value>
            <value>
                <fullName>Administrative Procedure Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>